--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         export PYTHONPATH=`pwd`/src
         python -m pytest --cov=src --cov-branch --cov-report xml
-#    - name: Upload Coverage to Codecov
-#      uses: codecov/codecov-action@v2
-#      with:
-#        token: ${{ secrets.CODECOV_TOKEN }}
+    - name: Upload Coverage to Codecov
+      uses: codecov/codecov-action@v2
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
