--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ idna==3.4
 imagesize==1.4.1
 iniconfig==1.1.1
 itsdangerous==2.1.2
-Jinja2==3.1.2
+Jinja2==3.1.3
 MarkupSafe==2.1.1
 packaging==21.3
 pluggy==1.0.0
@@ -34,6 +34,6 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 tomli==2.0.1
-urllib3
-Werkzeug
+urllib3==2.1.0
+Werkzeug==3.0.1
 WTForms==3.0.1
