--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ idna==3.7
 imagesize==1.4.1
 iniconfig==1.1.1
 itsdangerous==2.1.2
-Jinja2==3.1.4
+Jinja2==3.1.5
 MarkupSafe==2.1.1
 packaging==21.3
 pluggy==1.0.0
@@ -35,5 +35,5 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 tomli==2.0.1
 urllib3==2.2.2
-Werkzeug
+Werkzeug==3.1.3
 WTForms==3.0.1
